samples/_failures_safe/1761392174_f007b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f6508e8.c: In function ‘main’:
./samples/SAFE/__tmp_4f6508e8.c:161:19: error: missing terminating " character
  161 |         if (scanf("%d %d %d
      |                   ^~~~~~~~~
./samples/SAFE/__tmp_4f6508e8.c:161:9: error: expected expression at end of input
  161 |         if (scanf("%d %d %d
      |         ^~
./samples/SAFE/__tmp_4f6508e8.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f6508e8.c:161:9: error: expected declaration or statement at end of input
